@@ -1,3 +1,15 @@
+2008-06-14  Markus Steinborn <msteinbo@uni-paderborn.de>
+
+	* src/action.c(action_shellConfigureNotify): If autoresize is turned
+	off and actual scale is "Fit to window", then rescale.
+	
+	* src/gv_user_res.dat: New scale "Fit to window"
+	
+	* src/misc.c (set_new_scale): Handle "Fit to window"-scale
+	
+	* src/scale.c (scale_parseScales): Adjust parser to handle new
+	"Fit to window"-scale (symbolic scale factor is 0.000).
+
 2008-06-13  Markus Steinborn <msteinbo@uni-paderborn.de>
 
 	* src/main.c, src/gv_message.h, src/resource.c:  Rename infoWarnings to
